# smudgy

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml
.github/: actionlint.yaml  benchmark-scope.json
.github/scripts/: aggregate-callgrind.py  aggregate-paired-criterion.py  compare-benchmark-json.py  criterion-to-benchmark-json.py  run-callgrind-comparison.py  run-paired-criterion.py  select-pr-benchmarks.py
.github/scripts/tests/: test_benchmark_tools.py
.github/workflows/: benchmark.yml  ci.yml  release-benchmark.yml
assets/: installer.iss
bench/: Cargo.toml  README.md  generate_fixtures.py  item_names.txt  item_names_10k.txt
bench/benches/: catalogue.rs  gmcp_automap.rs  identity_tax.rs  ingest.rs  ingest_callgrind.rs  interop_delivery.rs  interop_ops.rs  interop_read.rs  map_spatial.rs  mapper_scale.rs  runner_control.rs  script_dispatch.rs  store_fanout.rs  terminal_buffer.rs  trigger_churn.rs  trigger_engine.rs  trigger_matching.rs  trigger_verbs.rs
bench/examples/: alloc_stats.rs  log_server.rs  rainbow_repro.rs
bench/src/: alloc.rs  atlas.rs  lib.rs  session.rs  wire.rs
benchmarks/: data.js
cloud/: Cargo.toml  README.md
cloud/examples/: shared_cache_demo.rs
cloud/src/: automatic_routing.rs  cloud_api.rs  color.rs  connection.rs  connection_geometry.rs  connection_lifecycle.rs  error.rs  lib.rs  mapper.rs  mutation.rs  package_api.rs  store_bindings.rs  store_node.rs
cloud/src/backends/: area_edits.rs  cached.rs  cloud.rs  composite.rs  ephemeral.rs  local.rs  local_migration.rs  mod.rs
cloud/src/mapper/: area_cache.rs  atlas_cache.rs  exit_cache.rs  pending.rs  room_cache.rs  room_connection.rs  sync_engine.rs
cloud/tests/: integration_api.rs  integration_packages.rs  integration_sync.rs  mock_smoke.rs
cloud/tests/support/: areas.rs  clone.rs  connections.rs  http.rs  identity.rs  mock_server.rs  mod.rs  mutations.rs  projection.rs  shares.rs  social.rs  state.rs  transfers.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  session.rs
core/src/models/: aliases.rs  auth.rs  hotkeys.rs  local_packages.rs  map_scopes.rs  modules.rs  naming.rs  packages.rs  persistence.rs  profile.rs  script_typings.rs  server.rs  settings.rs  shared_packages.rs  triggers.rs
core/src/models/script_typings/: smudgy-core.d.ts  smudgy-mapper.d.ts  smudgy-params.d.ts  smudgy-widgets.d.ts
core/src/session/: config.rs  connection.rs  registry.rs  runtime.rs  styled_line.rs
core/src/session/connection/: gmcp.rs  inflow.rs  msdp.rs  responders.rs  telnet.rs  transcode.rs  vt_processor.rs
core/src/session/connection/vt_processor/: sgr.rs
core/src/session/runtime/: action.rs  catalogue.rs  dispatch.rs  gmcp.rs  input.rs  line_operation.rs  matcher.rs  message_bus.rs  msdp.rs  origin.rs  pane.rs  script_action.rs  script_engine.rs  store.rs  trigger.rs
core/src/session/runtime/js/: smudgy.ts  tsconfig.json
core/src/session/runtime/script_engine/: mapper_api.rs  ops.rs  package_cache.rs  package_provider.rs  package_solver.rs
core/src/session/runtime/script_engine/mapper/: mapper.ts  tsconfig.json
core/tests/: auto_mapper_package.rs  catalogue_broadcast.rs  command_ordering.rs  demux_async_dispatch.rs  events_integration.rs  events_off_integration.rs  events_once_integration.rs  fallthrough_integration.rs  gmcp_integration.rs  handle_crud.rs  ingest_burst_coalescing.rs  input_api.rs  line_buffer.rs  line_replace_non_ascii.rs  local_override_interop.rs  msdp_integration.rs  package_isolates_enforcement.rs  package_isolates_op_capabilities.rs  package_isolates_sandbox.rs  pane_input.rs  pane_logging.rs  pane_routing.rs  raw_prefix.rs  script_get_settings.rs  script_integration.rs  script_user_automations.rs  session_shutdown.rs  session_store.rs  session_store_isolates.rs  styled_echo.rs  sys_receive_event.rs  telnet_negotiation.rs  tls_connection.rs
i18n/: Cargo.toml
i18n/locales/en-US/: main.ftl
i18n/locales/zh-TW/: main.ftl
i18n/src/: lib.rs  manifest.rs
inspector/: Cargo.toml
inspector/src/: main.rs
map_widget/: Cargo.toml
map_widget/src/: lib.rs  map_view.rs  render.rs  update.rs  viewport.rs
map_widget/src/map_editor/: mod.rs  program.rs
script/: Cargo.toml  build.rs
script/src/: dts.rs  dts_driver.js  interop_extract.rs  lib.rs  module_loader.rs  npm_resolver.rs  package_resolver.rs  transpiler.rs
script/tests/: packages.rs  permissions_spike.rs  runtime.rs
theme/: Cargo.toml
theme/src/: lib.rs  markdown.rs  secondary.rs  smudgy.rs
theme/src/builtins/: button.rs  checkbox.rs  container.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  radio.rs  rule.rs  slider.rs  svg.rs  text.rs  text_input.rs
ui/: Cargo.toml
ui/src/: assets.rs  cloud_account.rs  components.rs  i18n.rs  keymap.rs  lib.rs  main.rs  pane_drag.rs  pane_layout.rs  prefs.rs  session_store.rs  terminal_buffer.rs  update.rs  widgets.rs  win_rm.rs
ui/src/components/: cloud_errors.rs  color_picker.rs  modal.rs  resize_grips.rs  session_input.rs  social_panel.rs  toolbar.rs
ui/src/components/modal/: connect.rs
ui/src/components/modal/connect/: profile.rs  server.rs  tests.rs
ui/src/prefs/: palettes.rs
ui/src/terminal_buffer/: selection.rs
ui/src/widgets/: hotkey_input.rs  hotkey_matching_input.rs  split_terminal_pane.rs  wrap_row.rs
ui/src/widgets/split_terminal_pane/: scroll_bar.rs  terminal_pane.rs
ui/src/widgets/split_terminal_pane/terminal_pane/: spans.rs
ui/src/windows/: automations_window.rs  settings_window.rs  smudgy_window.rs
ui/src/windows/automations_window/: common.rs  dashboard.rs  editors.rs  manifest.rs  model.rs  packages.rs  palette.rs  param_values.rs  sidebar.rs  store_inspector.rs  topbar.rs
ui/src/windows/map_editor_window/: area_list.rs  automatic_routing.rs  commands.rs  inspector.rs  mod.rs  modals.rs  toolbar.rs
widgets/: Cargo.toml
widgets/src/: canvas.rs  extension.rs  lib.rs  map.rs  text_editor.rs  widget.rs
widgets/src/extension/ts/: widgets.ts
