[package]
name = "smudgy_ui"
version = "0.4.0"
edition = "2024"
build = "build.rs"

# The crate stays `smudgy_ui` (its name across the workspace), but the shipped
# executable is just `smudgy.exe` — that's what users launch and what the
# installer installs. Run it during dev with `cargo run` (the workspace's
# default-members make `cargo run` resolve to this binary; see ../Cargo.toml).
[[bin]]
name = "smudgy"
path = "src/main.rs"

[dependencies]
smudgy_core = { workspace = true }
smudgy_cloud = { workspace = true }
smudgy_theme = { workspace = true }
smudgy_map_widget = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
iced = { workspace = true }
iced_anim = { workspace = true }
iced_runtime = { workspace = true }
log = { workspace = true }
smudgy_widgets = { workspace = true }

validator.workspace = true
# Live pattern testing in the Automations window (alias/trigger testers).
regex = { workspace = true }
tokio.workspace = true
tokio-stream = "0.1.17"
arc-swap = { workspace = true }
chrono = { workspace = true }
# System font enumeration for the Preferences tab (same version cosmic-text
# already pins in Cargo.lock).
fontdb = "0.23"
# Open the download page in the system browser when the cloud reports this
# client is out of date (HTTP 426).
open = "5"
# Parse/compare the manifest version against published versions so the Publish button is
# semver-fluent (disable + explain when the version is invalid or already used).
semver = "1"
# Restart Manager cooperation so the installer can upgrade over a running smudgy:
# a window-proc subclass catches the session-end message and exits. See win_rm.rs.
[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = [
    "commctrl",
    "winuser",
    "minwindef",
    "basetsd",
    "windef",
] }

[dev-dependencies]
async-trait = "0.1"

[build-dependencies]
winresource = "0.1.17"

[lints]
workspace = true 

[package.metadata.bundle]
name = "Smudgy"
identifier = "org.smudgy"
icon = ["../assets/icon256.png", "../assets/icon256@2x.png"]
